update user registration
